# interdependent-lib

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
interdependent_lib/: __init__.py
interdependent_lib/edcm/: __init__.py  bones.py  markers.py
interdependent_lib/edcm/canon/: __init__.py
interdependent_lib/edcm/data/: bones_affixes_v1.json  bones_punct_v1.json  bones_words_v1.json  markers_v1.json
interdependent_lib/edcm/parser/: turns_rounds.py
interdependent_lib/pcea/: __init__.py  aead.py  codec.py  commitment.py  guardian.py  kdf.py  rekey.py  threshold.py  types.py  validate.py  wipe.py  wrap.py
interdependent_lib/pcna/: __init__.py  activations.py  layer.py  network.py
interdependent_lib/pcta/: __init__.py  circle.py
interdependent_lib/ptca/: __init__.py  constants.py  exchange.py  instance.py  primes.py  provenance.py  sentinels.py  tensor.py
tests/: test_edcm.py  test_pcea.py  test_pcna.py  test_pcta.py  test_ptca.py
