[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interdependent-lib"
version = "0.1.0"
description = "PTCA — Probabilistic Tensor Context Architecture: sentinel channels, prime-node tensor, provenance hashing, and exchange mechanics"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Erin Patrick Spencer", email = "wayseer@interdependentway.org" }
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/wayseer00/interdependent-lib"
Repository = "https://github.com/wayseer00/interdependent-lib"

[tool.setuptools.packages.find]
where = ["." ]
include = ["ptca*"]