[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interdependent-lib"
version = "0.1.0"
description = "PTCA/PCEA/EDCM — sentinel tensor architecture, guardian state encryption, and bone/marker inventory"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Erin Patrick Spencer", email = "wayseer@interdependentway.org" }
]
requires-python = ">=3.9"
dependencies = [
  "cryptography>=41",
]

[project.urls]
Homepage = "https://github.com/wayseer00/interdependent-lib"
Repository = "https://github.com/wayseer00/interdependent-lib"

[tool.setuptools.packages.find]
where = ["."]
include = ["interdependent_lib*"]

[tool.setuptools.package-data]
"interdependent_lib.edcm.data" = ["*.json"]